Member import work in progress

--- a/config/locales/en_gb.yml
+++ b/config/locales/en_gb.yml
@@ -23,4 +23,5 @@ en:
   not_registered_yet: "Not registered yet? Click here to register."
   forgot_password: "Forgot password"
   reset_my_password: "Reset my password"
+  resetting_your_password: "Resetting your password..."
   change_my_password: "Change My Password"
